@@ -128,7 +128,13 @@ parser (<em>beta</em>) Web interface (manakai version)</a></li>
 
 <li><a href="http://suika.fam.cx/www/harusame/readme" lang="ja">Harusame</a>, multilingual Web page management tool.
 
-</li><li>suikawari
+</li><li><a href="http://suika.fam.cx/gate/cvs/tool/bunshin/">Bunshin.pm</a>
+	<p>Web 上の連続する資源 (掲示板の記事のようなもの)
+	を切り出して RFC 822 形式のメッセージにするエンジン部分。</p>
+</li>
+<li><a href="http://suika.fam.cx/gate/cvs/tool/suikawari/">すいかわり</a>
+	<p>Bunshin.pm を使って、電子ニュースに記事を投稿する
+	script。 (cron とかから呼び出して使う。)</p>
 
 </li><li id="app-webhacc"><a href="http://suika.fam.cx/gate/2007/html/cc/"><abbr>WebHACC</abbr>
 (Web hypertext application conformance checker)</a> (See also <a href="http://suika.fam.cx/gate/2007/html/cc-about"><cite>about
