@@ -1,0 +1,224 @@
+<!DOCTYPE html><html lang="ja"><head>
+<title data-lang-content="title" lang="ja">manakai ―― インターネット・メッセージと XML のための
+Perl モジュール群</title>
+<link href="http://suika.fam.cx/www/style/html/xhtml" rel="stylesheet">
+<link href="#license" rel="license">
+<link href="#author" rel="author">
+<link href="manakai-commit" rel="feed" type="application/atom+xml">
+</head>
+<body>
+
+
+
+<div class="header">
+<h1><img alt="manakai (beta)" src="manakai-logo"></h1>
+
+<h2 data-lang-container=""><span lang="ja">インターネット・メッセージと XML
+のための Perl モジュール群</span></h2>
+
+</div>
+
+<div class="section" id="introduction">
+
+<h2 data-lang-container=""><span lang="ja">これは何?</span></h2>
+
+<p data-lang-container=""><span lang="ja"><dfn>manakai</dfn> は、 RFC 2822 系インターネット・メッセージと
+HTML 文書、XML 文書、 CSS スタイル・シートを処理するための 
+Perl 用オブジェクト指向モジュール群です。</span></p><p data-lang-container=""><span lang="ja">manakai は、標準規格に沿った DOM 界面を使って HTML 文書、
+XML 文書、CSS スタイル・シートを操作することができます。manakai の DOM 
+対応状況は次の表をご覧下さい。</span></p><ul>
+
+<li><a data-lang-container="" href="features"><span lang="ja">manakai が実装する DOM モジュール</span></a></li>
+
+</ul>
+
+<p>manakai の RFC 2822 系インターネット・メッセージを操作するためのモジュール群は、
+現在整理中です。</p>
+
+</div>
+
+
+<div class="section" id="news">
+<h2 data-lang-container=""><span lang="ja">最新情報</span></h2>
+
+<p data-lang-container=""><span lang="ja"><a href="manakai-commit" rel="feed" type="application/atom+xml">変更履歴差分の Atom
+フィード</a>はじめました。</span></p><ul>
+
+<li><a data-lang-container="" href="news-0-4" hreflang="en"><span lang="ja">manakai 0.4 の変更点 (英語)</span></a></li>
+
+<li><a data-lang-container="" href="news-0-3" hreflang="ja"><span lang="ja">manakai 0.3.<var>*</var> の変更点</span></a></li>
+
+</ul>
+
+</div>
+
+
+<div class="section" id="subprojects">
+<h2>下位プロジェクト</h2>
+
+<ul>
+<li><a href="http://suika.fam.cx/www/markup/html/whatpm/readme" lang="en">Whatpm</a></li>
+<li><a href="http://suika.fam.cx/www/manakai-charlib/readme" lang="en">charlib</a></li>
+</ul>
+</div>
+
+<div class="section" id="modules">
+<h2>モジュール</h2>
+
+<ul lang="en">
+<li><a href="../../lib/Error.html"><code>Error</code></a>
+(Strictly speaking, this module is not part of manakai, though 
+it is contained in the <a href="#download-manakai-core">manakai-core</a> 
+package.)</li>
+<li><a href="../../lib/Message/CGI/Carp.html"><code>Message::CGI::Carp</code></a></li>
+<li><a href="../../lib/Message/CGI/HTTP.html"><code>Message::CGI::HTTP</code></a></li>
+<li><a href="../../lib/Message/Charset/Info.html"><code>Message::Charset::Info</code></a></li>
+<li><a href="../../lib/Message/DOM/DOMImplementation.html"><code>Message::DOM::DOMImplementation</code></a></li>
+<li><a href="../../lib/Message/URI/URIReference.html"><code>Message::URI::URIReference</code></a></li>
+<li><a href="../../lib/Message/Util/Error.html"><code>Message::Util::Error</code></a></li>
+<li><a href="../../lib/Message/Util/Formatter/Base.html"><code>Message::Util::Formatter::Base</code></a></li>
+<li><a href="../../lib/Message/Util/Formatter/Boolean.html"><code>Message::Util::Formatter::Boolean</code></a></li>
+<li><a href="../../lib/Message/Util/Formatter/Text.html"><code>Message::Util::Formatter::Text</code></a></li>
+<li><a href="../../lib/Message/Util/HostPermit.html"><code>Message::Util::HostPermit</code></a></li>
+<li><a href="../../lib/Message/Util/QName/Filter.html"><code>Message::Util::QName::Filter</code></a></li>
+</ul>
+</div>
+
+<div class="section" id="documentation">
+<h2>文書</h2>
+
+<ul>
+<li>実装に関するメモ
+  <ul>
+  <li><a href="http://suika.fam.cx/gate/2005/sw/manakai/Namespaces">XML
+      名前空間関連の実装に関するメモ</a></li>
+  <li><a href="http://suika.fam.cx/gate/2005/sw/manakai/Error%20Types">誤り型一覧</a></li>
+  </ul>
+</li>
+<li>仕様書
+  <ul>
+  <li><a href="http://suika.fam.cx/gate/2005/sw/manakai/DOM%20Perl%20Binding">manakai の DOM Perl 束縛</a> (案)</li>
+  <li><a href="http://suika.fam.cx/gate/cvs/*checkout*/messaging/manakai/lib/Message/Markup/Atom.dis?rev=HEAD&amp;content-type=text/plain">Atom DOM 1.0</a> (案)</li>
+  <li><a href="http://suika.fam.cx/gate/2005/sw/SerialWalker%20specification"><code>SerialWalker</code></a> (案)</li>
+  <li><a href="http://suika.fam.cx/gate/2005/sw/manakai/DOM%20Extensions">manakai の DOM 拡張</a></li>
+  <li id="spec-domdtdef" lang="en"><a href="http://suika.fam.cx/www/markup/xml/domdtdef/domdtdef"><abbr>DOM</abbr>
+  Document Type Definition module</a></li>
+  <li><a href="http://suika.fam.cx/gate/2005/sw/manakai/Selectors%20Extensions">manakai
+  の Selectors 拡張</a></li>
+  </ul>
+</li>
+</ul>
+</div>
+
+<div class="section" id="demo">
+<h2>デモ</h2>
+
+<ul>
+<li><a href="http://suika.fam.cx/gate/2007/uri/uri-demo-interface" lang="en">manakai's
+URI module demo</a></li>
+<li><a href="http://suika.fam.cx/gate/2007/html/parser-manakai-interface" lang="en">HTML5
+parser (<em>beta</em>) Web interface (manakai version)</a></li>
+</ul>
+</div>
+
+<div class="section" id="applications">
+<h2 data-lang-container=""><span lang="ja">manakai-core を用いた応用</span></h2>
+
+<ul>
+
+<li><a href="http://suika.fam.cx/www/harusame/readme" lang="ja">Harusame</a>, multilingual Web page management tool.
+
+</li><li><a href="http://suika.fam.cx/gate/cvs/tool/bunshin/">Bunshin.pm</a>
+	<p>Web 上の連続する資源 (掲示板の記事のようなもの)
+	を切り出して RFC 822 形式のメッセージにするエンジン部分。</p>
+</li>
+<li><a href="http://suika.fam.cx/gate/cvs/tool/suikawari/">すいかわり</a>
+	<p>Bunshin.pm を使って、電子ニュースに記事を投稿する
+	script。 (cron とかから呼び出して使う。)</p>
+
+</li><li id="app-webhacc"><a href="http://suika.fam.cx/gate/2007/html/cc/"><abbr>WebHACC</abbr>
+(Web hypertext application conformance checker)</a> (See also <a href="http://suika.fam.cx/gate/2007/html/cc-about"><cite>about
+WebHACC</cite></a>).
+
+</li><li><a href="http://suika.fam.cx/commitfeed/readme"><code>mkcommitfeed.pl</code></a>
+
+</li></ul>
+
+</div>
+
+<div class="section" id="dependency">
+<h2>他のモジュールへの依存性</h2>
+
+<dl>
+<dt>Perl 5.8.7</dt>
+    <dd>古い版の Perl では動作しません。 5.8.4 くらいでも動くかもしれませんが、
+    未確認です。</dd>
+<dt><a href="http://suika.fam.cx/www/charclass/readme">CharClass</a></dt>
+    <dd>XML 構文解析器を使用する場合に 
+    <a href="http://suika.fam.cx/www/charclass/lib/Char/Class/XML.html"><code>Char::Class::XML</code></a>
+    が必要です。</dd>
+</dl>
+</div>
+
+<div class="section" id="install">
+<h2 lang="en">インストール</h2>
+
+<ol>
+<li><a href="#download">配布ファイルを入手します</a>。</li>
+<li>配布ファイルを適切な場所で展開します。
+<code class="file">lib/</code> 以下の Perl モジュール・ファイルを Perl
+が見つけられる場所 (<code class="perl">@LIB</code> で指定されたディレクトリ)
+に置くだけで構いません。</li>
+</ol>
+</div>
+
+<div class="section" id="download">
+<h2 lang="en">ダウンロード</h2>
+
+<ul>
+<li><a href="#download-manakai-core" lang="en">manakai-core</a>
+(<abbr>DOM</abbr> 実装)</li>
+<li><a href="http://suika.fam.cx/www/markup/html/whatpm/readme#download" lang="en">Whatpm</a>
+(<abbr>HTML</abbr>, <abbr>XML</abbr>, <abbr>CSS</abbr> 実装)</li>
+<li><a href="http://suika.fam.cx/www/manakai-charlib/readme#modules" lang="en">manakai
+charlib</a> (日本語文字符号化対応)</li>
+</ul>
+
+<dl id="download-manakai-core">
+<dt>開発版スナップ写真</dt>
+	<dd><a href="http://suika.fam.cx/www/2006/manakai-release/manakai-dev-latest">manakai
+	開発版スナップ写真 (最新版)</a></dd>
+	<dd><a href="http://suika.fam.cx/www/2006/manakai-release/manakai-0.4.0">manakai 0.4.0 (2007年9月29日)</a></dd>
+	<dd><a href="http://suika.fam.cx/www/2006/manakai-release/manakai-0.3.2">manakai 0.3.2 (2006年6月18日)</a></dd>
+	<dd><a href="http://suika.fam.cx/www/2006/manakai-release/manakai-0.3.1">manakai 0.3.1 (2006年4月22日)</a></dd>
+<dt>開発版</dt>
+	<dd><a href="http://suika.fam.cx/gate/cvs/messaging/manakai/" lang="en">CVS repository</a> (<a href="http://suika.fam.cx/admin/cvs/">suika.fam.cx</a>)</dd>
+</dl>
+
+</div>
+
+
+<div class="section" id="author" lang="en">
+<h2>Author</h2>
+
+<p><a href="http://suika.fam.cx/~wakaba/who?" rel="author">Wakaba</a>.</p>
+</div>
+
+<div class="section" id="license" lang="en">
+<h2>License</h2>
+
+<p>Copyright 2002‐2008 <span href="http://suika.fam.cx/~wakaba/who?">Wakaba</span> <code class="mail">&lt;<a href="mailto:w@suika.fam.cx" rel="author">w@suika.fam.cx</a>&gt;</code>.</p>
+
+<p>This library is free software; you can redistribute it and/or
+modify it under the same terms as Perl itself.</p>
+
+</div>
+
+<footer>
+[<a href="cover.en" hreflang="en" rel="alternate">English</a>]
+[<a href="cover.ja" hreflang="ja" rel="alternate">日本語</a>]
+</footer>
+
+
+
+</body></html>
