@@ -1,5 +1,10 @@
 2008-11-24  Wakaba  <wakaba@suika.fam.cx>
 
+	* cover.html.src: Copied links to Bunshin/suikawari from
+	../introduction.
+
+2008-11-24  Wakaba  <wakaba@suika.fam.cx>
+
 	* cover.html.src: Added a link to mkcommitfeed.pl.
 
 2008-10-21  Wakaba  <wakaba@suika.fam.cx>
